# ai-agent-workspace

./: .gitignore  Basic.ipynb  Cp_Retries_Itrp.ipynb  Iterations.ipynb  Multi_Agent.ipynb  main.py  pyproject.toml  realwporld_interupt.ipynb  remote.ipynb  stream.ipynb  time_shift.ipynb
agentic-ai/: Basic.ipynb  Memory.ipynb  interrupt.ipynb
agentic-ai/langraph/: 01_langgraph_basics.ipynb
agentic-ai/langraph/notes/: 01_langgraph_basics.md  (+9 more)
agentic-ai/notes/: AGENTIC_AI_HANDBOOK.md
agentic-ai/tool_agents/: 01_single_turn_tool_routing.py  02_react_agent_loop.py  03_prebuilt_react_agent.py
module1/: tutorial1.ipynb
rag/: app.py  parent_child_mapping copy.ipynb  parent_child_mapping.ipynb  routing.ipynb  scorer.ipynb  semantic_chunking.ipynb  tu2.ipynb  tu2.py
rag/01_foundations/: 01_tokenization.py
rag/02_chunking/: metadata_enrichment.ipynb  semantic_chunking.ipynb
rag/03_retrieval/: 02_sparse_retrieval_bm25.py  faiss_code_rag.py
rag/04_routing_reranking/: 03_cross_encoder_reranking.py  reranking.ipynb
rag/05_generation/: 04_llm_generation.py
rag/06_evaluation/: llm_as_judge.py
rag/07_advanced/: text_to_sql.ipynb
rag/notes/: 01_foundations_lcel_rag_chain.md  01_foundations_tokenization.md  02_chunking_metadata_enrichment.md  02_chunking_semantic.md  03_retrieval_bm25.md  03_retrieval_faiss_code_rag.md  03_retrieval_parent_child.md  04_routing_reranking_query_routing.md  04_routing_reranking_reranking.md  05_generation_llm_generation.md  06_evaluation_rag_metrics.md  07_advanced_text_to_sql.md  08_serving_fastapi.md  RAG_HANDBOOK.md
(+3 files in other folders)
