[project]
name = "ai-agent-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.2",
    "jupyterlab>=4.5.7",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "litellm>=1.89.3",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.13.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
